Value objects, models, Service, Repository implementation. API changed.
